--- a/src/app/users/user/user.component.html
+++ b/src/app/users/user/user.component.html
@@ -1,1 +1,36 @@
-<p>user works!</p>
+<div class="alert alert-info text-center"
+      role="alert"
+      *ngIf="loading">
+  <h4 class="alert-heading">Cargando...</h4>
+  <p>
+    <i class="fa fa-sync fa-spin fa-2x"></i>
+  </p>
+</div>
+
+<div class="alert alert-danger text-center"
+      role="alert"
+      *ngIf="error">
+  <h4 class="alert-heading">Error</h4>
+  <pre>{{ error | json }}</pre>
+</div>
+
+<div *ngIf="!loading" class="row">
+    <div class="col-4">
+        <img [src]="user.avatar"
+            [alt]="user.first_name"
+            class="img-thumbnail">
+    </div>
+
+    <div class="col">
+        <ul class="list-group">
+            <li class="list-group-item">
+                <b>Nombre:</b>
+                {{ user.first_name }}
+            </li>
+            <li class="list-group-item">
+                <b>Apellido:</b>
+                {{ user.last_name }}
+            </li>
+        </ul>
+    </div>
+</div>
